--- a/app/views/parking_registrations/new.html.erb
+++ b/app/views/parking_registrations/new.html.erb
@@ -1,1 +1,6 @@
+<ul>
+  <% @parking_registration.errors.full_messages.each do | message| %>
+    <li><%= message %></li>
+  <% end %>
+</ul>
 <%= render 'form' %>
