--- a/app/views/parking_registrations/_form.html.erb
+++ b/app/views/parking_registrations/_form.html.erb
@@ -5,8 +5,8 @@
   <%= simple_form_for @parking_registration do | form | %>
     <%= form.input :first_name %>
     <%= form.input :last_name %>
-    <%= form.input :email, input_html: { value: current_email }  %>
-    <%= form.input :spot_number, type: :numerical, error: false  %>
+    <%= form.input :email, input_html: { value: current_user.try(:email) }  %>
+    <%= form.input :spot_number, type: :numerical, error: false, input_html: { value: current_user.try(:last_spot) }  %>
     <%= form.button :submit, 'Register' %>
   <% end %>
   <% if @parking_registration.errors.full_messages.size > 0 %>
