can go to a history page

--- a/app/views/parking_registrations/show.html.erb
+++ b/app/views/parking_registrations/show.html.erb
@@ -13,6 +13,6 @@
 <% end %>
 
 <% if @parking_registration.repeat_parker? %>
-  <%= link_to parking_registration_history_path, 'View History' %>
+  <%= link_to 'View History', parking_registration_history_path(@parking_registration.id) %>
 <% end %>
 
